fixed dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,19 +21,19 @@ html:not([data-headlessui-focus-visible]) *:focus {
     outline: none !important;
 }
 
-#header__light, #header__dark, #header__system {
+#header__light, #header__dark {
     display: none;
 }
 
-html[color-theme="dark"] #header__dark {
+html[class='dark'] #header__dark {
     display: block;
 }
-html[color-theme="light"] #header__light {
+
+html[class='light'] #header__light {
     display: block;
 }
-html[color-theme="system"] #header__system {
-    display: block;
-}
+
+
 
 /*:root {*/
 /*  --foreground-rgb: 0, 0, 0;*/
